# vulkan-quickstart

./: .gitignore  README.md  sadistic.code-workspace  vulkan-quickstart.code-workspace  world-simulation.code-workspace
.devcontainer/: Dockerfile  devcontainer.json
simulation/: CMakeLists.txt  README.md
simulation/include/: error.h  fifo.h  log.h  mutex.h  pipeline.h  pstring.h  semaphore.h  thread.h  vulkan.h  xyzw.h
simulation/source/: main.cpp  pipeline.cpp  pstring.cpp  shader.cpp  vulkan.cpp  xyzw.cpp
src/: CMakeLists.txt
src/include/: animation.h  audio.h  canvas.h  cube.h  data.h  effect.h  effects.h  engine.h  fifo.h  font.h  glext.h  graphics.h  images.h  legacy_canvas.h  legacy_region.h  pair.h  properties.h  regions.h  score.h  semaphore.h  shader.h  surface.h  vulkan.h  xyzw.h
src/include/old/: block.h  blocks.h  colour.h  columns.h  coordinate.h  credits.h  display.h  doorway.h  doorways.h  entrance.h  exit.h  extensions.h  gate.h  geometry.h  globals.h  image.h  json.h  jtypes.h  legacy_graphics.h  legacy_level.h  level.h  level1.h  level2.h  level3.h  level4.h  level5.h  levels.h  line.h  menu.h  opengl.h  plasma.h  sprite.h  table.h  texture.h  timeout.h  user.h  vector.h  weapon.h  weapons.h
src/source/: animation.cpp  block.cpp  canvas.cpp  credits.cpp  doorway.cpp  doorways.cpp  error.cpp  image.cpp  images.cpp  legacy_canvas.cpp  log.cpp  main.cpp  opengl.cpp  plasma.cpp  table.cpp  texture.cpp  thread.cpp  vector.cpp  vulkan.cpp  weapon.cpp
src/source/old/: audio.cpp  blocks.cpp  columns.cpp  cube.cpp  effect.cpp  effects.cpp  engine.cpp  extensions.cpp  font.cpp  gate.cpp  globals.cpp  json.cpp  level.cpp  line.cpp  menu.cpp  sprite.cpp  timeout.cpp  user.cpp  weapons.cpp
vulkan-quickstart/: CMakeLists.txt  README.md
vulkan-quickstart/assets/shaders/: compile.sh  mesh.vert  multi.vert  projection.vert  shader.vert  storage.vert
vulkan-quickstart/assets/shaders/compiled/: mesh.spv  multi.spv  projection.spv  storage.spv
vulkan-quickstart/include/: buffer.h  constants.h  matrix.h  mesh.h  pipeline.h  shader.h  vector.h  vertex.h  vulkan.h  window.h
vulkan-quickstart/include/core/: fifo.h  thread.h
vulkan-quickstart/include/interfaces/: window.h
vulkan-quickstart/include/primatives/: matrix.h  mesh.h  vector.h  vertex.h
vulkan-quickstart/shaders/: vert.spv
vulkan-quickstart/source/: buffer.cpp  main.cpp  matrix.cpp  mesh.cpp  pipeline.cpp  shader.cpp  vulkan.cpp  window.cpp
vulkan-quickstart/source/core/: thread.cpp
vulkan-quickstart/source/primatives/: matrix.cpp  mesh.cpp
